cscrip/finsihed_grammar
S' -> program_start
program_start -> program | statement | data_structure
data_structure -> class | struct | list_structure | array |empty
list_structure | list
program | type_declaration main_statement left_curl_op statement right_curl_op | type_declaration main_statement left_par_op type_declaration identifier right_par_op left_curl_op statement right_curl_op
type_declaration -> int_declaration | float_declaration | double_declaration | string_declaration | char_declaration
statement -> function_call_statement | conditional_statement | loop_statement | arithmetic_statement | break_state | return_state | function_declaration_statement | printed_statement
break_state -> break_statement
printed_statement -> print_statement literal_or_identifier | print_statement literal_or_identifier comma_statement identifier
return_state -> return_statement literal_or_identifier | return_statement statement
conditional_statement -> if_block | if_block elif_block | if_block else_block | left_par_op inequalities right_par_op | left_par_op inequalities right_par_op question_op left_curl_op statement colon_statement statement right_curl_op
if_block -> if_statement inequalities left_curl_op statement right_curl_op
else_block -> else_statement left_curl_op statement right_curl_op
elif_block -> elif_statement inequalities left_curl_op statement right_curl_op
inequalities -> literal_or_identifier inequalities_sym literal_or_identifier
inequalities_sym -> equivalent_op | less_or_eq_op |  great_or_eq_op | less_op | great_op | and | or | bool_literal | not_equal | <empty>
function_declaration_statement -> literal_or_identifier left_par_op function_parameter right_par_op left_curl_op statement right_curl_op
function_parameter -> literal_or_identifier | literal_or_identifier comma_statement function_parameter
literal_or_identifier -> identifier | data_literal
function_call_statement -> literal_or_identifier left_par_op function_parameter right_par_op
loop_statement -> while_statement inequalities left_curl_op statement right_curl_op | for_statement arithmetic_statement semi_colon_statement left_curl_op statement right_curl_op | for_statement arithmetic_statement semi_colon_statement inequalities semi_colon_statement arithmetic_statement left_curl_op statement right_curl_op
arithmetic_statement -> arithmetic_expr | arithmetic_statement -> unary_op
unary_op -> identifier increment | unary_op -> identifier decrement
arithmetic_expr -> identifier assign_op arithmetic_expr | arithmetic_expr arithmetic_op arithmetic_expr | left_par_op arithmetic_expr right_par_op | literal_or_identifier | identifier assign_op function_call_statement
arithmetic_op -> expo_op | mul_op | div_op | add_op | sub_op
data_literal -> int_literal | float_literal | double_literal | char_literal | string_literal
empty -> <empty>
